Fixed word wrapping in individual message

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -77,6 +77,7 @@ a{
   background-color: $primary;
   color: #333;
   max-width: 60vw;
+  overflow-wrap: break-word;
 }
 .them{
   order: 0;
@@ -111,7 +112,7 @@ a{
  */
 .message-creator {
   position: absolute;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   right: 0;
   height: $footer-height;
